# inflection

./: .gitignore  README.md  pyproject.toml
inflection/: datasets.py  models.py
inflection/encoding/: openai.py
notebooks/: CreateEmbeddings.ipynb  TrainPredictor.ipynb  VisualizePredictions.ipynb
