[tool.poetry]
name = "inflection"
version = "0.1"
description = "I-JEPA for natural language arithmetic"
authors = ["Beck LaBash <becklabash@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/becklabs/inflection"

[tool.poetry.dependencies]
python = "^3.7"
langchain = "0.0.262"
chromadb = "0.4.5"
openai = "0.27.8"
inflect = "7.0.0"
termcolor = "2.3.0"
numpy = "1.25.2"
ipykernel = "6.25.1"
matplotlib = "3.7.2"
tiktoken = "0.4.0"
scikit-learn = "1.3.0"
ipympl = "0.7.0"
joblib = "1.1.0"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"